<resources>
    <string name="app_name">AND-EVAL2-Exo1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connexion_via_twitter">Connexion via Twitter</string>
    <string name="cr_ation_d_un_compte_bloggies">Création d\'un compte Bloggies</string>
    <string name="connexion_via_facebook">Connexion via Facebook</string>
    <string name="email_login">Email</string>
    <string name="signIn_button">Connexion</string>
    <string name="confirmation_signup">Confirmation</string>
    <string name="password_signUp">Password</string>
    <string name="login_signUp">Login</string>
    <string name="inscription_button">Inscription</string>
    <string name="congrats">Félicitations, vous êtes connecté!</string>
</resources>