<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpFragment">

    <ImageView
        android:id="@+id/signUpLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bloggies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/email_login"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/signUpLogo"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/loginEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/login_signUp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"
        android:inputType="text"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="15dp"
        android:hint="@string/password_signUp"
        app:layout_constraintTop_toBottomOf="@id/loginEditText"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/confirmationEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="15dp"
        android:hint="@string/confirmation_signup"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/SignUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/inscription_button"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>